--- a/survey form/index.html
+++ b/survey form/index.html
@@ -49,6 +49,7 @@
         select{
             width: 100%;
             height: 35px;
+            background-color: #fff;
         }
         textarea{
             height: 150px;
@@ -110,7 +111,7 @@
         <input type="checkbox" name="skills" value="php"><label class="no-pad" for="skills">PHP</label><br>
         <input type="checkbox" name="skills" value="sql"><label class="no-pad" for="skills">SQL</label><br>
 
-        <p id="feedback-label">Give us any feedback:</p>
+        <p id="feedback-label">Give us any feedback</p>
         <textarea name="feedback"></textarea><br>
 
         <button type="submit" id="submit">Submit</button>
