--- a/technical documentation/index.html
+++ b/technical documentation/index.html
@@ -5,116 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technical Documentation</title>
-    <style>
-        *{
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        #navbar{
-            position: fixed;
-            top: 0px;
-            left: 0px;
-            width: 150px;
-            height: 100%;
-            background-color: #ddd;
-            z-index: 2;
-        }
-        header{
-            margin: 25px 0px 5px 0px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        header:not(#navbar header){
-            border-bottom: 2px solid #000;
-            width: fit-content;
-            padding: 2px;
-        }
-        #navbar header{
-            text-align: center;
-        }
-        #navbar a{
-            display: block;
-            width: calc(100% - 8px);
-            text-decoration: none;
-            text-align: center;
-            padding: 5px 0px;
-            background-color: #eee;
-            color: #000;
-            margin: 4px;
-            font-size: 18px;
-            transition-duration: 0.3s;
-        }
-        #navbar a:hover{
-            background-color: #000;
-            color: #eee;
-        }
-        #main-doc{
-            position: relative;
-            left: 175px;
-            width: calc(100% - 175px);
-            padding: 10px 0px 50px 0px;
-        }
-        p{
-            font-size: 16px;
-            padding: 6px 0px 2px 0px;
-        }
-        ul, ol{
-            padding: 10px 30px;
-            background-color: #eee;
-            width: fit-content;
-        }
-        pre{
-            padding: 6px 10px;
-            background-color: #000;
-            color: #fff;
-            width: fit-content;
-        }
-
-
-        @media screen and (max-width: 800px) {
-            #navbar {
-                position: relative;
-                top: 0px;
-                left: 0px;
-                width: 100%;
-                height: auto;
-                padding-bottom: 2px;
-            }
-            #navbar header{
-                margin: 0px;
-                padding: 20px 0px 10px 0px;
-            }
-            #main-doc{
-                padding-top: 0px;
-                position: relative;
-                left: 15px;
-                padding: 10px 0px 50px 0px;
-                width: calc(100% - 50px);
-            }
-            pre{
-                max-width: 100%;
-                overflow-x: auto;
-            }
-        }
-
-
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #f1f1ff;
-        }
-        ::-webkit-scrollbar-track:hover {
-            background: #D1D1DD;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #666;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #444;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
 </head>
 <body>
     <nav id="navbar">
@@ -124,8 +16,9 @@
         <a class="nav-link" href="#Data_Types">Data Types</a>
         <a class="nav-link" href="#Variables">Variables</a>
         <a class="nav-link" href="#Type_Casting">Type Casting</a>
+        <a class="nav-link" href="#User_Input">User Input</a>
+        <a class="nav-link" href="#User_Input">Booleans</a>
     </nav>
-
 
     <main id="main-doc">
         <section class="main-section" id="Introduction">
@@ -146,7 +39,6 @@
                 <li>It is close to C , C++ and Java ... It is easy for programmers to switch to C# or vice versa</li>
             </ul>
         </section>
-
 
         <section class="main-section" id="Syntax">
             <header>Syntax</header>
@@ -170,7 +62,6 @@ namespace Hello
 }</code></pre>
         </section>
 
-
         <section class="main-section" id="Data_Types">
             <header>Data Types</header>
             <p>Some data types that are supported by C# :-</p>
@@ -182,7 +73,6 @@ namespace Hello
                 <li>boolean (bool) ... true , false</li>
             </ol>
         </section>
-
 
         <section class="main-section" id="Variables">
             <header>Variables</header>
@@ -199,7 +89,6 @@ bool student = true ;
 bool male = true ;</code></pre>
         </section>
 
-
         <section class="main-section" id="Type_Casting">
             <header>Type Casting</header>
             <p>Type casting means turning a certain data from a type to another one.</p>
@@ -211,7 +100,26 @@ int myInt = (int) pi ;
 Console.WriteLine(pi) ; // 3.14
 Console.WriteLine(myInt) ; // 3</code></pre>
         </section>
+
+        <section class="main-section" id="User_Input">
+            <header>User Input</header>
+            <p>You already know that Console.WriteLine() is used to output text.</p>
+            <p>Now you are going to learn how to use Console.ReadLine() to get user input.</p>
+            <pre><code>Console.ReadLine();</code></pre>
+            <p>For example :-</p>
+            <pre><code>int age ;
+Console.Write("Enter your age:") ;
+age = Console.ReadLine() ;
+Console.WriteLine("You are " + age + " years old") ;</code></pre>
+        </section>
+
+        <section class="main-section" id="Booleans">
+            <header>Booleans</header>
+            <p>Booleans are data types that can be used to control whether something is true or false(yes or no / on or off).</p>
+            <pre><code>bool male = true ;
+bool student = true ;
+bool permission_accepted = false ;</code></pre>
+        </section>
     </main>
 </body>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
